// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plumbing detection > captures event flow for tracked observable 1`] = `
{
  "eventSummary": [
    {
      "type": "track-call",
    },
    {
      "id": "1",
      "type": "constructor-call-return",
    },
    {
      "id": "2",
      "type": "constructor-call-return",
    },
    {
      "type": "track-call-return",
    },
    {
      "id": "5",
      "observable_id": "2",
      "subscription_id": "4",
      "type": "send-call",
    },
    {
      "id": "6",
      "observable_id": "2",
      "subscription_id": "3",
      "type": "send-call",
    },
    {
      "id": "6",
      "observable_id": "2",
      "type": "send-call-return",
    },
    {
      "id": "5",
      "observable_id": "2",
      "type": "send-call-return",
    },
  ],
  "eventsAfterCreate": [
    "track-call",
    "constructor-call-return",
    "constructor-call-return",
    "track-call-return",
  ],
  "eventsAfterEmit": [
    "track-call",
    "constructor-call-return",
    "constructor-call-return",
    "track-call-return",
    "send-call",
    "send-call",
    "send-call-return",
    "send-call-return",
  ],
  "eventsAfterSubscribe": [
    "track-call",
    "constructor-call-return",
    "constructor-call-return",
    "track-call-return",
  ],
  "subscriptionCount": 0,
  "track": {
    "created_at": 0,
    "created_at_end": 0,
    "id": "0",
    "index": 0,
    "key": "test:baseline",
    "module_id": undefined,
    "module_version": undefined,
    "mutable_observable_id": "1",
    "parent_track_id": undefined,
    "prev_observable_ids": [],
    "stable_observable_id": "2",
    "version": 0,
  },
  "trackKeys": [
    "test:baseline",
  ],
  "values": [
    42,
  ],
}
`;

exports[`plumbing detection > detects and skips wrapper→inner subscription 1`] = `
{
  "detection": {
    "innerSubExists": false,
    "innerSubShouldBeSkipped": true,
    "wrapperSubExists": false,
  },
  "eventSummary": [
    {
      "type": "track-call",
    },
    {
      "id": "1",
      "type": "constructor-call-return",
    },
    {
      "id": "2",
      "type": "constructor-call-return",
    },
    {
      "type": "track-call-return",
    },
    {
      "id": "5",
      "observable_id": "2",
      "subscription_id": "4",
      "type": "send-call",
    },
    {
      "id": "6",
      "observable_id": "2",
      "subscription_id": "3",
      "type": "send-call",
    },
    {
      "id": "6",
      "observable_id": "2",
      "type": "send-call-return",
    },
    {
      "id": "5",
      "observable_id": "2",
      "type": "send-call-return",
    },
  ],
  "eventsAfterCreate": [
    "track-call",
    "constructor-call-return",
    "constructor-call-return",
    "track-call-return",
  ],
  "eventsAfterEmit": [
    "track-call",
    "constructor-call-return",
    "constructor-call-return",
    "track-call-return",
    "send-call",
    "send-call",
    "send-call-return",
    "send-call-return",
  ],
  "eventsAfterSubscribe": [
    "track-call",
    "constructor-call-return",
    "constructor-call-return",
    "track-call-return",
  ],
  "subscriptionCount": 0,
  "track": {
    "created_at": 0,
    "created_at_end": 0,
    "id": "0",
    "index": 0,
    "key": "test:notrack",
    "module_id": undefined,
    "module_version": undefined,
    "mutable_observable_id": "1",
    "parent_track_id": undefined,
    "prev_observable_ids": [],
    "stable_observable_id": "2",
    "version": 0,
  },
  "trackKeys": [
    "test:notrack",
  ],
  "values": [
    42,
  ],
}
`;

exports[`plumbing detection > verify subscription stack during inner subscribe 1`] = `
{
  "subscribeEventsAfter": [],
  "subscribeEventsBefore": 0,
  "track": {
    "mutable_observable_id": "1",
    "stable_observable_id": "2",
  },
}
`;

exports[`plumbing detection > verify track has both stable and mutable IDs set 1`] = `
{
  "areDistinct": true,
  "hasMutableId": true,
  "hasStableId": true,
  "mutableId": "1",
  "stableId": "2",
}
`;
